--- a/varsha.ipynb
+++ b/varsha.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 62,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -17,13 +17,12 @@
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "df = pd.read_csv('diabetes_012_health_indicators_BRFSS2015.csv')\n",
-    "\n"
+    "df = pd.read_csv('diabetes_012_health_indicators_BRFSS2015.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 63,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -63,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 64,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -106,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -139,6 +138,103 @@
     "\n",
     "plt.show()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.8424116997792495\n",
+      "0.018255282245348472\n",
+      "0.13933301797540207\n",
+      "[[1. 1. 1. ... 9. 4. 3.]\n",
+      " [0. 0. 0. ... 7. 6. 1.]\n",
+      " [1. 1. 1. ... 9. 4. 8.]\n",
+      " ...\n",
+      " [0. 0. 1. ... 2. 5. 2.]\n",
+      " [1. 0. 1. ... 7. 5. 1.]\n",
+      " [1. 1. 1. ... 9. 6. 2.]]\n",
+      "0:1 proportions in the test dataset\n",
+      "0.8432355723746452\n",
+      "0.15676442762535478\n",
+      "Logistic Regression accuracy: 0.8488489435509303\n",
+      "Perceptron learning accuracy: 0.8407442447177547\n",
+      "0.20458660229330114\n",
+      "0.9590111821683683\n"
+     ]
+    }
+   ],
+   "source": [
+    "# proportions of 0:1:2 diabetes\n",
+    "y = list(df[\"Diabetes_012\"])\n",
+    "length = len(y)\n",
+    "print(y.count(0)/length)\n",
+    "print(y.count(1)/length)\n",
+    "print(y.count(2)/length)\n",
+    "\n",
+    "\n",
+    "# pre data cleaned model simple benchmark classification\n",
+    "\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.preprocessing import MinMaxScaler\n",
+    "from sklearn.linear_model import LogisticRegression, Perceptron\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "y = list(df[\"Diabetes_012\"])\n",
+    "y = list(map(lambda X: 1 if X == 2 or X == 1 else X, y))\n",
+    "# print(y)\n",
+    "X = df.to_numpy()\n",
+    "X = np.delete(X, 0,1)\n",
+    "print(X)\n",
+    "\n",
+    "min_max = MinMaxScaler()\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.25, random_state=42)\n",
+    "\n",
+    "X_train = min_max.fit_transform(X_train)\n",
+    "X_test = min_max.transform(X_test)\n",
+    "print(\"0:1 proportions in the test dataset\")\n",
+    "print(y_test.count(0)/len(y_test))\n",
+    "print(y_test.count(1)/len(y_test))\n",
+    "\n",
+    "logistic = LogisticRegression(random_state=0).fit(X_train, y_train)\n",
+    "y_pred = logistic.predict(X_test)\n",
+    "\n",
+    "print(f\"Logistic Regression accuracy: {accuracy_score(y_test, y_pred)}\")\n",
+    "perceptron = Perceptron(random_state=0).fit(X_train, y_train)\n",
+    "y_pred = perceptron.predict(X_test)\n",
+    "\n",
+    "print(f\"Perceptron learning accuracy: {accuracy_score(y_test, y_pred)}\")\n",
+    "\n",
+    "# hypothesis: since the accuracy is almost the same as the 0 proportion, the model must be predicting 0s almost always as a cheating mechanism to\n",
+    "# have high accuracy.\n",
+    "\n",
+    "# check if most of the correct predictions are for class 0.\n",
+    "\n",
+    "num_correct_1 = 0\n",
+    "num_correct_0 = 0\n",
+    "for i in range(len(y_test)):\n",
+    "    \n",
+    "    if (y_test[i] == 1 and y_pred[i] ==1  ):\n",
+    "        num_correct_1+=1\n",
+    "\n",
+    "    if (y_test[i] == 0 and y_pred[i] ==0  ):\n",
+    "        num_correct_0+=1\n",
+    "\n",
+    "print(num_correct_1/y_test.count(1))\n",
+    "print(num_correct_0/y_test.count(0))\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
