updataed, this is on unlcean data

--- a/ljmurphy.ipynb
+++ b/ljmurphy.ipynb
@@ -947,7 +947,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "23280847",
    "metadata": {},
    "outputs": [
@@ -980,14 +980,48 @@
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>8</td>\n",
+       "      <td>61.389762</td>\n",
+       "      <td>0.552152</td>\n",
+       "      <td>-0.132824</td>\n",
+       "      <td>0.848273</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>16</td>\n",
+       "      <td>64.077474</td>\n",
+       "      <td>0.551995</td>\n",
+       "      <td>-0.132500</td>\n",
+       "      <td>0.848313</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>21</td>\n",
+       "      <td>66.338796</td>\n",
+       "      <td>0.551995</td>\n",
+       "      <td>-0.132500</td>\n",
+       "      <td>0.848313</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>32</td>\n",
+       "      <td>65.174513</td>\n",
+       "      <td>0.553650</td>\n",
+       "      <td>-0.135897</td>\n",
+       "      <td>0.847899</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: [Units, Time(s), MSE, R², Acc]\n",
-       "Index: []"
+       "   Units    Time(s)       MSE        R²       Acc\n",
+       "0      8  61.389762  0.552152 -0.132824  0.848273\n",
+       "1     16  64.077474  0.551995 -0.132500  0.848313\n",
+       "2     21  66.338796  0.551995 -0.132500  0.848313\n",
+       "3     32  65.174513  0.553650 -0.135897  0.847899"
       ]
      },
      "metadata": {},
