removed indexing save feature
removed added extra column feature while saving csv

--- a/eda.ipynb
+++ b/eda.ipynb
@@ -158,6 +158,7 @@
     "filter_condition = ~((df[continuous_cols] < (Q1 - IQR)) | (df[continuous_cols] > (Q3 + IQR))).any(axis=1)\n",
     "df_clean = df[filter_condition]\n",
     "\n",
+    "\n",
     "print(\"\\nOriginal shape:\", df.shape)\n",
     "print(\"Cleaned shape:\", df_clean.shape)\n"
    ]
@@ -270,10 +271,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# save the cleaned data:\n",
+    "\n",
+    "df_clean.to_csv('cleaned_diabetes.csv', index=False)\n"
+   ]
   }
  ],
  "metadata": {
