--- a/eda.ipynb
+++ b/eda.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -36,8 +36,7 @@
     "plt.figure(figsize=(12, 10))  # Optional: Make plot bigger for readability\n",
     "sns.heatmap(correlation_matrix, annot=True, cmap='coolwarm', fmt=\".2f\")\n",
     "plt.title('Correlation Matrix Heatmap')\n",
-    "plt.show()\n",
-    "\n"
+    "plt.show()"
    ]
   },
   {
