--- a/ljmurphy.ipynb
+++ b/ljmurphy.ipynb
@@ -1616,29 +1616,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# ─── Cell 3: RandomSearch over the refined space ───────────────────────────────\n",
-    "import keras_tuner as kt\n",
-    "from tensorflow.keras.callbacks import EarlyStopping\n",
+    "# Cell 2: 6 layer neural network with 32 neurons\n",
+    "#         Build, train & evaluate 8-unit model\n",
+    "import time \n",
+    "# numpy as np\n",
+    "from sklearn.metrics import mean_squared_error, r2_score, accuracy_score\n",
     "\n",
-    "tuner = kt.RandomSearch(\n",
-    "    build_model,\n",
-    "    objective='val_accuracy',\n",
-    "    max_trials=20,\n",
-    "    directory='kt_dir',\n",
-    "    project_name='diabetes_mlp_refined'\n",
+    "model_32_neurons = make_model(32)\n",
+    "model_32_neurons.summary()\n",
+    "\n",
+    "start = time.time()\n",
+    "history_32 = model_32_neurons.fit(\n",
+    "    X_train_norm, y_train,\n",
+    "    epochs=20, batch_size=32,\n",
+    "    validation_split=0.1, verbose=1\n",
     ")\n",
+    "train_time_32 = time.time() - start\n",
     "\n",
-    "stop_early = EarlyStopping(monitor='val_loss', patience=3, restore_best_weights=True)\n",
+    "y_pred_32 = model_32_neurons.predict(X_test_norm).argmax(axis=1)\n",
+    "mse_32 = mean_squared_error(y_test, y_pred_32)\n",
+    "r2_32  = r2_score(y_test, y_pred_32)\n",
+    "acc_32 = accuracy_score(y_test, y_pred_32)\n",
     "\n",
-    "tuner.search(\n",
-    "    X_train, y_train,\n",
-    "    epochs=30,\n",
-    "    validation_split=0.1,\n",
-    "    callbacks=[stop_early],\n",
-    "    class_weight=class_weights,\n",
-    "    batch_size=hp.Choice('batch_size', [32, 64, 128]),  # include batch_size if you like\n",
-    "    verbose=1\n",
-    ")\n"
+    "print(f\"32 neurons time to train: {train_time_32:.1f}s, MSE: {mse_32:.4f}, R²: {r2_32:.4f}, ACC: {acc_32:.4f}\")\n"
    ]
   },
   {
@@ -1746,237 +1746,6 @@
     "## Hyperparameter Tuning - 8 Neurons\n",
     "\n",
     "---"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "725e489c",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: keras-tuner in ./venv310/lib/python3.10/site-packages (1.4.7)\n",
-      "Requirement already satisfied: requests in ./venv310/lib/python3.10/site-packages (from keras-tuner) (2.32.3)\n",
-      "Requirement already satisfied: keras in ./venv310/lib/python3.10/site-packages (from keras-tuner) (3.9.2)\n",
-      "Requirement already satisfied: packaging in ./venv310/lib/python3.10/site-packages (from keras-tuner) (25.0)\n",
-      "Requirement already satisfied: kt-legacy in ./venv310/lib/python3.10/site-packages (from keras-tuner) (1.0.5)\n",
-      "Requirement already satisfied: optree in ./venv310/lib/python3.10/site-packages (from keras->keras-tuner) (0.15.0)\n",
-      "Requirement already satisfied: h5py in ./venv310/lib/python3.10/site-packages (from keras->keras-tuner) (3.13.0)\n",
-      "Requirement already satisfied: absl-py in ./venv310/lib/python3.10/site-packages (from keras->keras-tuner) (2.2.2)\n",
-      "Requirement already satisfied: ml-dtypes in ./venv310/lib/python3.10/site-packages (from keras->keras-tuner) (0.5.1)\n",
-      "Requirement already satisfied: numpy in ./venv310/lib/python3.10/site-packages (from keras->keras-tuner) (2.1.3)\n",
-      "Requirement already satisfied: rich in ./venv310/lib/python3.10/site-packages (from keras->keras-tuner) (14.0.0)\n",
-      "Requirement already satisfied: namex in ./venv310/lib/python3.10/site-packages (from keras->keras-tuner) (0.0.9)\n",
-      "Requirement already satisfied: charset-normalizer<4,>=2 in ./venv310/lib/python3.10/site-packages (from requests->keras-tuner) (3.4.2)\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in ./venv310/lib/python3.10/site-packages (from requests->keras-tuner) (2025.4.26)\n",
-      "Requirement already satisfied: idna<4,>=2.5 in ./venv310/lib/python3.10/site-packages (from requests->keras-tuner) (3.10)\n",
-      "Requirement already satisfied: urllib3<3,>=1.21.1 in ./venv310/lib/python3.10/site-packages (from requests->keras-tuner) (2.4.0)\n",
-      "Requirement already satisfied: typing-extensions>=4.5.0 in ./venv310/lib/python3.10/site-packages (from optree->keras->keras-tuner) (4.13.2)\n",
-      "Requirement already satisfied: pygments<3.0.0,>=2.13.0 in ./venv310/lib/python3.10/site-packages (from rich->keras->keras-tuner) (2.19.1)\n",
-      "Requirement already satisfied: markdown-it-py>=2.2.0 in ./venv310/lib/python3.10/site-packages (from rich->keras->keras-tuner) (3.0.0)\n",
-      "Requirement already satisfied: mdurl~=0.1 in ./venv310/lib/python3.10/site-packages (from markdown-it-py>=2.2.0->rich->keras->keras-tuner) (0.1.2)\n",
-      "\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m23.0.1\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m25.1.1\u001b[0m\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip install --upgrade pip\u001b[0m\n",
-      "Note: you may need to restart the kernel to use updated packages.\n",
-      "Class weights: {0: np.float64(0.37846720368239356), 1: np.float64(22.306565382528486), 2: np.float64(3.1955693742712787)}\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Cell 1: Install & Data Prep\n",
-    "%pip install --upgrade keras-tuner\n",
-    "\n",
-    "import pandas as pd\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.preprocessing import StandardScaler\n",
-    "from sklearn.utils import class_weight\n",
-    "import numpy as np\n",
-    "\n",
-    "# 1) Load & split\n",
-    "df = pd.read_csv('cleaned_diabetes.csv')\n",
-    "X = df.drop('Diabetes_012', axis=1).values\n",
-    "y = df['Diabetes_012'].values\n",
-    "\n",
-    "X_train, X_test, y_train, y_test = train_test_split(\n",
-    "    X, y,\n",
-    "    test_size=0.25,\n",
-    "    random_state=42,\n",
-    "    stratify=y\n",
-    ")\n",
-    "\n",
-    "# 2) Scale\n",
-    "scaler = StandardScaler().fit(X_train)\n",
-    "X_train = scaler.transform(X_train)\n",
-    "X_test  = scaler.transform(X_test)\n",
-    "\n",
-    "n_features = X_train.shape[1]\n",
-    "\n",
-    "# 3) Compute class weights to handle imbalance\n",
-    "raw_w = class_weight.compute_class_weight(\n",
-    "    class_weight='balanced',\n",
-    "    classes=np.unique(y_train),\n",
-    "    y=y_train\n",
-    ")\n",
-    "class_weights = dict(enumerate(raw_w))\n",
-    "print(\"Class weights:\", class_weights)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "8b4949d9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Cell 2: Model‐Builder with 4 tunable knobs\n",
-    "\n",
-    "from tensorflow.keras import Sequential, Input\n",
-    "from tensorflow.keras.layers import Dense, Dropout\n",
-    "from tensorflow.keras.regularizers import l2\n",
-    "from tensorflow.keras.optimizers import SGD, Adam\n",
-    "\n",
-    "def build_model(hp):\n",
-    "    # 1) L2 regularization\n",
-    "    reg = hp.Choice('reg_lambda', [0.0, 1e-4, 1e-3])\n",
-    "    # 2) Learning rate\n",
-    "    lr  = hp.Choice('learning_rate', [1e-2, 1e-3, 1e-4])\n",
-    "    # 3) Dropout rate\n",
-    "    dr  = hp.Choice('dropout_rate', [0.0, 0.2, 0.5])\n",
-    "    # 4) Optimizer type\n",
-    "    opt_name = hp.Choice('optimizer', ['sgd', 'adam'])\n",
-    "    if opt_name == 'sgd':\n",
-    "        mo = hp.Choice('momentum', [0.0, 0.5, 0.9])\n",
-    "        optimizer = SGD(learning_rate=lr, momentum=mo)\n",
-    "    else:\n",
-    "        optimizer = Adam(learning_rate=lr)\n",
-    "\n",
-    "    model = Sequential([ Input(shape=(n_features,)) ])\n",
-    "    for _ in range(6):\n",
-    "        model.add(Dense(8,\n",
-    "                        activation='relu',\n",
-    "                        kernel_regularizer=l2(reg)))\n",
-    "        if dr > 0:\n",
-    "            model.add(Dropout(dr))\n",
-    "    model.add(Dense(3, activation='softmax'))\n",
-    "\n",
-    "    model.compile(\n",
-    "        optimizer=optimizer,\n",
-    "        loss='sparse_categorical_crossentropy',\n",
-    "        metrics=['accuracy']\n",
-    "    )\n",
-    "    return model\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "08c3786c",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Trial 20 Complete [00h 00m 10s]\n",
-      "val_accuracy: 0.6383168697357178\n",
-      "\n",
-      "Best val_accuracy So Far: 0.8774120211601257\n",
-      "Total elapsed time: 00h 07m 48s\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Cell 3: RandomizedSearch over those 4 knobs\n",
-    "\n",
-    "import keras_tuner as kt\n",
-    "from tensorflow.keras.callbacks import EarlyStopping\n",
-    "\n",
-    "tuner = kt.RandomSearch(\n",
-    "    build_model,\n",
-    "    objective='val_accuracy',\n",
-    "    max_trials=20,              # try 20 random combos\n",
-    "    executions_per_trial=1,\n",
-    "    directory='kt_dir',\n",
-    "    project_name='diabetes_mlp'\n",
-    ")\n",
-    "\n",
-    "stop_early = EarlyStopping(monitor='val_loss', patience=3, restore_best_weights=True)\n",
-    "\n",
-    "tuner.search(\n",
-    "    X_train, y_train,\n",
-    "    epochs=30,\n",
-    "    validation_split=0.1,\n",
-    "    callbacks=[stop_early],\n",
-    "    class_weight=class_weights,  # rebalance classes in the loss\n",
-    "    verbose=1\n",
-    ")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "842d6de4",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Best hyperparameters: {'reg_lambda': 0.0001, 'learning_rate': 0.01, 'dropout_rate': 0.5, 'optimizer': 'sgd', 'momentum': 0.9}\n",
-      "Epoch 1/30\n",
-      "\u001b[1m3469/3469\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m3s\u001b[0m 614us/step - accuracy: 0.2483 - loss: 1.1244 - val_accuracy: 0.8774 - val_loss: 1.0468\n",
-      "Epoch 2/30\n",
-      "\u001b[1m3469/3469\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2s\u001b[0m 551us/step - accuracy: 0.2977 - loss: 1.1081 - val_accuracy: 0.0161 - val_loss: 1.2271\n",
-      "Epoch 3/30\n",
-      "\u001b[1m3469/3469\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2s\u001b[0m 546us/step - accuracy: 0.2338 - loss: 1.1125 - val_accuracy: 0.0161 - val_loss: 1.1295\n",
-      "Epoch 4/30\n",
-      "\u001b[1m3469/3469\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2s\u001b[0m 547us/step - accuracy: 0.2144 - loss: 1.1072 - val_accuracy: 0.0161 - val_loss: 1.1209\n",
-      "\u001b[1m1285/1285\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 251us/step\n",
-      "\n",
-      "Test set classification report:\n",
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "           0     0.8808    1.0000    0.9366     36209\n",
-      "           1     0.0000    0.0000    0.0000       614\n",
-      "           2     0.0000    0.0000    0.0000      4288\n",
-      "\n",
-      "    accuracy                         0.8808     41111\n",
-      "   macro avg     0.2936    0.3333    0.3122     41111\n",
-      "weighted avg     0.7757    0.8808    0.8249     41111\n",
-      "\n",
-      "Confusion matrix:\n",
-      " [[36209     0     0]\n",
-      " [  614     0     0]\n",
-      " [ 4288     0     0]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Cell 4: Rebuild best model and evaluate on test set\n",
-    "\n",
-    "from sklearn.metrics import classification_report, confusion_matrix\n",
-    "\n",
-    "best_hp = tuner.get_best_hyperparameters(1)[0]\n",
-    "print(\"Best hyperparameters:\", best_hp.values)\n",
-    "\n",
-    "final_model = tuner.hypermodel.build(best_hp)\n",
-    "final_model.fit(\n",
-    "    X_train, y_train,\n",
-    "    epochs=30,\n",
-    "    validation_split=0.1,\n",
-    "    callbacks=[stop_early],\n",
-    "    class_weight=class_weights,\n",
-    "    verbose=1\n",
-    ")\n",
-    "\n",
-    "y_pred = final_model.predict(X_test).argmax(axis=1)\n",
-    "print(\"\\nTest set classification report:\")\n",
-    "print(classification_report(y_test, y_pred, digits=4, zero_division=0))\n",
-    "print(\"Confusion matrix:\\n\", confusion_matrix(y_test, y_pred))\n"
    ]
   },
   {
