--- a/murphy-5050-v.ipynb
+++ b/murphy-5050-v.ipynb
@@ -2564,7 +2564,20 @@
    "execution_count": null,
    "id": "c8d993b7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/laurelmurphy/projects/diabetes-risk-predictor/diabetes-venv/lib/python3.11/site-packages/sklearn/neural_network/_multilayer_perceptron.py:691: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (200) reached and the optimization hasn't converged yet.\n",
+      "  warnings.warn(\n",
+      "/Users/laurelmurphy/projects/diabetes-risk-predictor/diabetes-venv/lib/python3.11/site-packages/sklearn/neural_network/_multilayer_perceptron.py:691: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (200) reached and the optimization hasn't converged yet.\n",
+      "  warnings.warn(\n",
+      "/Users/laurelmurphy/projects/diabetes-risk-predictor/diabetes-venv/lib/python3.11/site-packages/sklearn/neural_network/_multilayer_perceptron.py:691: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (200) reached and the optimization hasn't converged yet.\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "# Re-importing necessary libraries after environment reset\n",
     "import pandas as pd\n",
@@ -2663,7 +2676,7 @@
    "id": "f9025802",
    "metadata": {},
    "source": [
-    "## Ruthe below GiGi"
+    "## Run the below GiGi"
    ]
   },
   {
