Added Binary Logistic Regression Models with Stats

--- a/Ariani_Binomial_Log_Reg.ipynb
+++ b/Ariani_Binomial_Log_Reg.ipynb
@@ -41,23 +41,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 93,
    "id": "a5735296-4238-4dcd-b658-c204dd96963c",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "warning: in the working copy of 'Ariani_Binomial_Log_Reg.ipynb', LF will be replaced by CRLF the next time Git touches it\n",
-      "warning: in the working copy of 'Ariani_Multinomial_Log_reg.ipynb', LF will be replaced by CRLF the next time Git touches it\n",
-      "warning: in the working copy of '.ipynb_checkpoints/Ariani_Binomial_Log_Reg-checkpoint.ipynb', LF will be replaced by CRLF the next time Git touches it\n",
-      "warning: in the working copy of '.ipynb_checkpoints/Ariani_Multinomial_Log_reg-checkpoint.ipynb', LF will be replaced by CRLF the next time Git touches it\n"
+      "[main af3b12c] Added Binary Logistic Regression Models with Stats\n",
+      " 5 files changed, 2122 insertions(+), 143 deletions(-)\n",
+      " create mode 100644 .ipynb_checkpoints/Ariani_Binomial_Log_Reg-checkpoint.ipynb\n",
+      " create mode 100644 .ipynb_checkpoints/Ariani_Multinomial_Log_reg-checkpoint.ipynb\n",
+      " create mode 100644 .ipynb_checkpoints/varsha-checkpoint.ipynb\n"
      ]
     }
    ],
    "source": [
-    "!git add .  "
+    "!git commit -m \"Added Binary Logistic Regression Models with Stats\""
    ]
   },
   {
