removed unused code

--- a/murphy-5050-v.ipynb
+++ b/murphy-5050-v.ipynb
@@ -2561,7 +2561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "c8d993b7",
    "metadata": {},
    "outputs": [
@@ -2576,6 +2576,22 @@
       "/Users/laurelmurphy/projects/diabetes-risk-predictor/diabetes-venv/lib/python3.11/site-packages/sklearn/neural_network/_multilayer_perceptron.py:691: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (200) reached and the optimization hasn't converged yet.\n",
       "  warnings.warn(\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(learning_rate        0.01\n",
+       " alpha              0.0001\n",
+       " batch_size             16\n",
+       " activation           relu\n",
+       " mean_cv_acc      0.747476\n",
+       " Name: 30, dtype: object,\n",
+       " 0.746658179503501)"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -2667,163 +2683,6 @@
     ")\n",
     "best_mlp.fit(X_train, y_train)\n",
     "test_acc = best_mlp.score(X_test, y_test)\n",
-    "\n",
-    "best_params, test_acc\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "f9025802",
-   "metadata": {},
-   "source": [
-    "## Run the below GiGi"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f6675524",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import torch\n",
-    "import torch.nn as nn\n",
-    "import torch.optim as optim\n",
-    "from torch.utils.data import DataLoader, TensorDataset, random_split\n",
-    "\n",
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "from sklearn.model_selection import KFold\n",
-    "from sklearn.preprocessing import StandardScaler\n",
-    "from sklearn.metrics import accuracy_score\n",
-    "\n",
-    "# Load the uncleaned 50/50 diabetes dataset\n",
-    "df = pd.read_csv('/mnt/data/diabetes_binary_5050split_health_indicators_BRFSS2015.csv')\n",
-    "X = df.drop('Diabetes_binary', axis=1).values\n",
-    "y = df['Diabetes_binary'].values\n",
-    "\n",
-    "# Standardize features\n",
-    "scaler = StandardScaler().fit(X)\n",
-    "X = scaler.transform(X)\n",
-    "\n",
-    "# Convert to PyTorch tensors\n",
-    "X_tensor = torch.tensor(X, dtype=torch.float32)\n",
-    "y_tensor = torch.tensor(y, dtype=torch.float32).view(-1, 1)\n",
-    "\n",
-    "# Define the model with flexible activations\n",
-    "class DiabetesNet(nn.Module):\n",
-    "    def __init__(self, activation_fn, alpha=0.1):\n",
-    "        super(DiabetesNet, self).__init__()\n",
-    "        self.fc1 = nn.Linear(X.shape[1], 16)\n",
-    "        self.fc2 = nn.Linear(16, 16)\n",
-    "        self.fc3 = nn.Linear(16, 16)\n",
-    "        self.fc4 = nn.Linear(16, 16)\n",
-    "        self.out = nn.Linear(16, 1)\n",
-    "        self.activation_fn = activation_fn\n",
-    "        self.alpha = alpha\n",
-    "\n",
-    "    def forward(self, x):\n",
-    "        # Apply activation function\n",
-    "        if self.activation_fn == 'relu':\n",
-    "            x = torch.relu(self.fc1(x))\n",
-    "            x = torch.relu(self.fc2(x))\n",
-    "            x = torch.relu(self.fc3(x))\n",
-    "            x = torch.relu(self.fc4(x))\n",
-    "        elif self.activation_fn == 'tanh':\n",
-    "            x = torch.tanh(self.fc1(x))\n",
-    "            x = torch.tanh(self.fc2(x))\n",
-    "            x = torch.tanh(self.fc3(x))\n",
-    "            x = torch.tanh(self.fc4(x))\n",
-    "        elif self.activation_fn == 'leaky_relu':\n",
-    "            x = nn.LeakyReLU(self.alpha)(self.fc1(x))\n",
-    "            x = nn.LeakyReLU(self.alpha)(self.fc2(x))\n",
-    "            x = nn.LeakyReLU(self.alpha)(self.fc3(x))\n",
-    "            x = nn.LeakyReLU(self.alpha)(self.fc4(x))\n",
-    "        elif self.activation_fn == 'sigmoid':\n",
-    "            x = torch.sigmoid(self.fc1(x))\n",
-    "            x = torch.sigmoid(self.fc2(x))\n",
-    "            x = torch.sigmoid(self.fc3(x))\n",
-    "            x = torch.sigmoid(self.fc4(x))\n",
-    "        return torch.sigmoid(self.out(x))\n",
-    "\n",
-    "# Define the hyperparameter grid\n",
-    "learning_rates = [5e-3, 1e-2, 2e-2]\n",
-    "batch_sizes = [8, 16, 32]\n",
-    "alphas = [0.01, 0.1]\n",
-    "activations = ['relu', 'tanh', 'leaky_relu', 'sigmoid']\n",
-    "\n",
-    "results = []\n",
-    "kf = KFold(n_splits=3, shuffle=True, random_state=42)\n",
-    "\n",
-    "# Manual 3-fold CV\n",
-    "for lr in learning_rates:\n",
-    "    for bs in batch_sizes:\n",
-    "        for alpha in alphas:\n",
-    "            for activation in activations:\n",
-    "                fold_accuracies = []\n",
-    "                for train_index, val_index in kf.split(X):\n",
-    "                    X_train, X_val = X_tensor[train_index], X_tensor[val_index]\n",
-    "                    y_train, y_val = y_tensor[train_index], y_tensor[val_index]\n",
-    "\n",
-    "                    # Create DataLoader for training\n",
-    "                    train_loader = DataLoader(TensorDataset(X_train, y_train), batch_size=bs, shuffle=True)\n",
-    "\n",
-    "                    # Build and train the model\n",
-    "                    model = DiabetesNet(activation_fn=activation, alpha=alpha)\n",
-    "                    optimizer = optim.Adam(model.parameters(), lr=lr)\n",
-    "                    criterion = nn.BCELoss()\n",
-    "\n",
-    "                    # Train for 10 epochs (to avoid long run time)\n",
-    "                    model.train()\n",
-    "                    for epoch in range(10):\n",
-    "                        for xb, yb in train_loader:\n",
-    "                            optimizer.zero_grad()\n",
-    "                            y_pred = model(xb)\n",
-    "                            loss = criterion(y_pred, yb)\n",
-    "                            loss.backward()\n",
-    "                            optimizer.step()\n",
-    "\n",
-    "                    # Validate\n",
-    "                    model.eval()\n",
-    "                    with torch.no_grad():\n",
-    "                        y_val_pred = model(X_val).round()\n",
-    "                        acc = accuracy_score(y_val, y_val_pred)\n",
-    "                        fold_accuracies.append(acc)\n",
-    "\n",
-    "                # Record the mean accuracy across folds\n",
-    "                avg_acc = np.mean(fold_accuracies)\n",
-    "                results.append({\n",
-    "                    'learning_rate': lr,\n",
-    "                    'batch_size': bs,\n",
-    "                    'alpha': alpha,\n",
-    "                    'activation': activation,\n",
-    "                    'mean_cv_acc': avg_acc\n",
-    "                })\n",
-    "\n",
-    "# Convert to DataFrame for easier viewing\n",
-    "results_df = pd.DataFrame(results)\n",
-    "best_params = results_df.loc[results_df['mean_cv_acc'].idxmax()]\n",
-    "\n",
-    "# Final evaluation on the full test set\n",
-    "best_model = DiabetesNet(activation_fn=best_params['activation'], alpha=best_params['alpha'])\n",
-    "optimizer = optim.Adam(best_model.parameters(), lr=best_params['learning_rate'])\n",
-    "criterion = nn.BCELoss()\n",
-    "\n",
-    "# Train on the full training set\n",
-    "train_loader = DataLoader(TensorDataset(X_tensor, y_tensor), batch_size=int(best_params['batch_size']), shuffle=True)\n",
-    "for epoch in range(20):\n",
-    "    for xb, yb in train_loader:\n",
-    "        optimizer.zero_grad()\n",
-    "        y_pred = best_model(xb)\n",
-    "        loss = criterion(y_pred, yb)\n",
-    "        loss.backward()\n",
-    "        optimizer.step()\n",
-    "\n",
-    "# Test on the full test set\n",
-    "best_model.eval()\n",
-    "with torch.no_grad():\n",
-    "    y_test_pred = best_model(X_test).round()\n",
-    "    test_acc = accuracy_score(y_tensor[-len(y_test_pred):], y_test_pred)\n",
     "\n",
     "best_params, test_acc\n"
    ]
