--- a/working_dir/murphy-5050-v.ipynb
+++ b/working_dir/murphy-5050-v.ipynb
@@ -907,12 +907,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "62f7da86",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Cell 1 – Imports\n",
+    "# Imports\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "\n",
@@ -927,18 +927,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "1ae0ad94",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Cell 2 – Load the cleaned 50/50 dataset\n",
+    "# Load the cleaned 50/50 dataset\n",
     "df = pd.read_csv('diabetes_binary_5050split_health_indicators_BRFSS2015.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "db29bf21",
    "metadata": {},
    "outputs": [
@@ -1272,11 +1272,11 @@
     }
    ],
    "source": [
-    "# Cell 3 – Split into features & target, then train/test (50:50)\n",
+    "# Split into features & target, then train/test (50:50)\n",
     "X = df.drop('Diabetes_binary', axis=1).values\n",
     "y = df['Diabetes_binary'].values\n",
     "\n",
-    "# Cell 3 – Single train/test split (80% train, 20% test)\n",
+    "# Single train/test split (80% train, 20% test)\n",
     "X_train, X_test, y_train, y_test = train_test_split(\n",
     "    X, y,\n",
     "    test_size=0.2,\n",
@@ -1289,7 +1289,7 @@
     "X_train = scaler.transform(X_train)\n",
     "X_test  = scaler.transform(X_test)\n",
     "\n",
-    "# Cell 4 – Model builder for 6-layer net (4 hidden + in/out)\n",
+    "# Model builder for 6-layer net (4 hidden + in/out)\n",
     "def build_model(units):\n",
     "    m = Sequential([\n",
     "        Dense(units, activation='relu', input_dim=X_train.shape[1]),\n",
@@ -1304,7 +1304,7 @@
     "    return m\n",
     "\n",
     "\n",
-    "# Cell 5 – Train & evaluate each variant, no extra splits\n",
+    "# Train & evaluate each variant, no extra splits\n",
     "results = {}\n",
     "for units in [8, 16, 21, 32]:\n",
     "    print(f\"\\nTraining with {units} neurons per hidden layer\")\n",
@@ -1340,18 +1340,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "90edd74f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Cell 1 – Load the cleaned 50/50 dataset\n",
+    "# Load the cleaned 50/50 dataset\n",
     "df = pd.read_csv('5050_clean_diabetes_dataset.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "85aefa27",
    "metadata": {},
    "outputs": [
@@ -1685,11 +1685,11 @@
     }
    ],
    "source": [
-    "# Cell 2 – Split into features & target, then train/test (50:50)\n",
+    "# Split into features & target, then train/test (50:50)\n",
     "X = df.drop('Diabetes_binary', axis=1).values\n",
     "y = df['Diabetes_binary'].values\n",
     "\n",
-    "# Cell 3 – Single train/test split (80% train, 20% test)\n",
+    "# Single train/test split (80% train, 20% test)\n",
     "X_train, X_test, y_train, y_test = train_test_split(\n",
     "    X, y,\n",
     "    test_size=0.2,\n",
@@ -1702,7 +1702,7 @@
     "X_train = scaler.transform(X_train)\n",
     "X_test  = scaler.transform(X_test)\n",
     "\n",
-    "# Cell 4 – Model builder for 6-layer net (4 hidden + in/out)\n",
+    "# Model builder for 6-layer net (4 hidden + in/out)\n",
     "def build_model(units):\n",
     "    m = Sequential([\n",
     "        Dense(units, activation='relu', input_dim=X_train.shape[1]),\n",
@@ -1717,7 +1717,7 @@
     "    return m\n",
     "\n",
     "\n",
-    "# Cell 5 – Train & evaluate each variant, no extra splits\n",
+    "# Train & evaluate each variant, no extra splits\n",
     "results = {}\n",
     "for units in [8, 16, 21, 32]:\n",
     "    print(f\"\\nTraining with {units} neurons per hidden layer\")\n",
@@ -1732,7 +1732,7 @@
     "    print(f\"Test accuracy: {acc:.4f}\")\n",
     "    results[units] = acc\n",
     "\n",
-    "# Cell 6 – Comparison plot\n",
+    "# Comparison plot\n",
     "plt.plot(list(results.keys()), list(results.values()), marker='o')\n",
     "plt.xlabel('Neurons per hidden layer')\n",
     "plt.ylabel('Test Accuracy')\n",
@@ -1753,12 +1753,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "b9973176",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Cell 1\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "\n",
@@ -1781,12 +1780,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "064d4958",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Cell 2\n",
     "# 80/20 split\n",
     "X_train, X_test, y_train, y_test = train_test_split(\n",
     "    X, y, test_size=0.2, stratify=y, random_state=42\n",
@@ -1995,7 +1993,6 @@
     }
    ],
    "source": [
-    "# Cell 3\n",
     "def make_model(input_dim, dropout_rate=0.3):\n",
     "    m = Sequential()\n",
     "    for i in range(6):\n",
@@ -2021,7 +2018,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "c89cce33",
    "metadata": {},
    "outputs": [
@@ -2075,7 +2072,6 @@
     }
    ],
    "source": [
-    "# Cell 4\n",
     "es = EarlyStopping(\n",
     "    monitor=\"val_loss\",\n",
     "    patience=5,\n",
@@ -2094,7 +2090,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "7bd7f2b1",
    "metadata": {},
    "outputs": [
@@ -2137,8 +2133,6 @@
     }
    ],
    "source": [
-    "# Cell 5\n",
-    "# raw predictions\n",
     "y_prob = model.predict(X_test).flatten()\n",
     "y_pred = (y_prob >= 0.5).astype(int)\n",
     "\n",
@@ -2163,7 +2157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "845cc08d",
    "metadata": {},
    "outputs": [
@@ -2189,7 +2183,6 @@
     }
    ],
    "source": [
-    "# Cell 6\n",
     "plt.plot(history.history[\"loss\"], label=\"train loss\")\n",
     "plt.plot(history.history[\"val_loss\"], label=\"val loss\")\n",
     "plt.xlabel(\"Epoch\"); plt.ylabel(\"Loss\"); plt.legend()\n",
@@ -2213,12 +2206,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "525f1c9f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Cell 1 – Imports & Data Load\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "\n",
@@ -2276,7 +2268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "a0f006b0",
    "metadata": {},
    "outputs": [
@@ -2445,7 +2437,6 @@
     }
    ],
    "source": [
-    "# Cell 4 – GridSearchCV over key hyperparameters\n",
     "param_grid = {\n",
     "    \"hidden_layer_sizes\": [(8,)*6, (16,)*6, (32,)*6],\n",
     "    \"alpha\":              [1e-4, 1e-3, 1e-2],      # L2 penalty\n",
@@ -2466,7 +2457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "34b4dff8",
    "metadata": {},
    "outputs": [
@@ -2480,14 +2471,13 @@
     }
    ],
    "source": [
-    "# Cell 5 – Best Hyperparameters & CV Score\n",
     "print(\"Best params:      \", grid.best_params_)\n",
     "print(\"Best CV accuracy: \", grid.best_score_)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "c539d02c",
    "metadata": {},
    "outputs": [
@@ -2529,7 +2519,6 @@
     }
    ],
    "source": [
-    "# Cell 6 – Final Test‐Set Evaluation & Plots\n",
     "best_mlp = grid.best_estimator_\n",
     "y_prob  = best_mlp.predict_proba(X_test)[:, 1]\n",
     "y_pred  = best_mlp.predict(X_test)\n",
