Best Binary Logistic Regression Baseline Results with Latest Dataset

--- a/working_dir/Ariani_Binomial_Log_Reg.ipynb
+++ b/working_dir/Ariani_Binomial_Log_Reg.ipynb
@@ -33,32 +33,9 @@
     "   \n",
     "Measure:\n",
     "1) accuracy (correct/total)\n",
-    "2) train time\n",
     "3) AIC -> low is good\n",
     "4) Confusion Matrix\n",
-    "5) ROC curve later (read up on it)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 93,
-   "id": "a5735296-4238-4dcd-b658-c204dd96963c",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[main af3b12c] Added Binary Logistic Regression Models with Stats\n",
-      " 5 files changed, 2122 insertions(+), 143 deletions(-)\n",
-      " create mode 100644 .ipynb_checkpoints/Ariani_Binomial_Log_Reg-checkpoint.ipynb\n",
-      " create mode 100644 .ipynb_checkpoints/Ariani_Multinomial_Log_reg-checkpoint.ipynb\n",
-      " create mode 100644 .ipynb_checkpoints/varsha-checkpoint.ipynb\n"
-     ]
-    }
-   ],
-   "source": [
-    "!git commit -m \"Added Binary Logistic Regression Models with Stats\""
+    "5) Classification report"
    ]
   },
   {
@@ -74,64 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "7d64420a-d39a-46fa-9bc4-f5a5c053148b",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "   Diabetes_binary  HighBP  HighChol  CholCheck   BMI  Smoker  Stroke  \\\n",
-      "0              0.0     1.0       0.0        1.0  26.0     0.0     0.0   \n",
-      "1              0.0     1.0       1.0        1.0  26.0     1.0     1.0   \n",
-      "2              0.0     0.0       0.0        1.0  26.0     0.0     0.0   \n",
-      "3              0.0     1.0       1.0        1.0  28.0     1.0     0.0   \n",
-      "4              0.0     0.0       0.0        1.0  29.0     1.0     0.0   \n",
-      "\n",
-      "   HeartDiseaseorAttack  PhysActivity  Fruits  ...  AnyHealthcare  \\\n",
-      "0                   0.0           1.0     0.0  ...            1.0   \n",
-      "1                   0.0           0.0     1.0  ...            1.0   \n",
-      "2                   0.0           1.0     1.0  ...            1.0   \n",
-      "3                   0.0           1.0     1.0  ...            1.0   \n",
-      "4                   0.0           1.0     1.0  ...            1.0   \n",
-      "\n",
-      "   NoDocbcCost  GenHlth  MentHlth  PhysHlth  DiffWalk  Sex   Age  Education  \\\n",
-      "0          0.0      3.0       5.0      30.0       0.0  1.0   4.0        6.0   \n",
-      "1          0.0      3.0       0.0       0.0       0.0  1.0  12.0        6.0   \n",
-      "2          0.0      1.0       0.0      10.0       0.0  1.0  13.0        6.0   \n",
-      "3          0.0      3.0       0.0       3.0       0.0  1.0  11.0        6.0   \n",
-      "4          0.0      2.0       0.0       0.0       0.0  0.0   8.0        5.0   \n",
-      "\n",
-      "   Income  \n",
-      "0     8.0  \n",
-      "1     8.0  \n",
-      "2     8.0  \n",
-      "3     8.0  \n",
-      "4     8.0  \n",
-      "\n",
-      "[5 rows x 22 columns]\n",
-      "[[ 0.  1.  0. ...  4.  6.  8.]\n",
-      " [ 0.  1.  1. ... 12.  6.  8.]\n",
-      " [ 0.  0.  0. ... 13.  6.  8.]\n",
-      " ...\n",
-      " [ 1.  1.  1. ... 13.  6.  4.]\n",
-      " [ 1.  1.  1. ... 11.  2.  4.]\n",
-      " [ 1.  1.  1. ...  9.  6.  2.]]\n",
-      "(70692, 22)\n"
-     ]
-    }
-   ],
-   "source": [
-    "df = pd.read_csv('diabetes_binary_5050split_health_indicators_BRFSS2015.csv')\n",
-    "print(df.head())\n",
-    "print(df.to_numpy())\n",
-    "print(df.shape)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 11,
    "id": "789d494a-7a7e-4248-838b-e3d937abdd1b",
    "metadata": {},
    "outputs": [
@@ -202,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 13,
    "id": "108ca0a4-5fba-4b5f-a133-a88bdde4f0df",
    "metadata": {},
    "outputs": [
@@ -230,8 +150,8 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.76      0.73      0.74      7090\n",
-      "           1       0.74      0.77      0.75      7049\n",
+      "         0.0       0.76      0.73      0.74      7090\n",
+      "         1.0       0.74      0.77      0.75      7049\n",
       "\n",
       "    accuracy                           0.75     14139\n",
       "   macro avg       0.75      0.75      0.75     14139\n",
@@ -256,7 +176,7 @@
     "y_pred_a = BLR_a.predict(X_test_21)\n",
     "\n",
     "# accuracy\n",
-    "acc = accuracy_score(y_test, y_pred)\n",
+    "acc = accuracy_score(y_test_21, y_pred_a)\n",
     "print(f\"Binary Logistic Regression (21 features) accuracy: {acc}\")\n",
     "\n",
     "# Number correct = accuracy * total samples\n",
@@ -283,7 +203,7 @@
     "plt.gca().figure.text(0.5, 0.05, 'Prediction', ha='center', fontsize=13)\n",
     "plt.show()\n",
     "\n",
-    "print(classification_report(y_test, y_pred_a))\n",
+    "print(classification_report(y_test_21, y_pred_a))\n",
     "#-------------------plot----------------------\n",
     "\n",
     "#Measure:\n",
@@ -390,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 15,
    "id": "37195f01-0382-4334-90e5-9593b482c2ac",
    "metadata": {},
    "outputs": [
@@ -398,7 +318,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Binary Logistic Regression (13 features) accuracy: 0.7478605276186435\n",
+      "Binary Logistic Regression (21 features) accuracy: 0.7478605276186435\n",
       "Number Correct: 10574 out of 14139\n"
      ]
     },
@@ -418,8 +338,8 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.76      0.73      0.74      7090\n",
-      "           1       0.74      0.77      0.75      7049\n",
+      "         0.0       0.76      0.73      0.74      7090\n",
+      "         1.0       0.74      0.77      0.75      7049\n",
       "\n",
       "    accuracy                           0.75     14139\n",
       "   macro avg       0.75      0.75      0.75     14139\n",
@@ -438,8 +358,8 @@
     "\n",
     "\n",
     "# accuracy\n",
-    "acc = accuracy_score(y_test, y_pred_c)\n",
-    "print(f\"Binary Logistic Regression (13 features) accuracy: {acc}\")\n",
+    "acc = accuracy_score(y_test_21, y_pred_c)\n",
+    "print(f\"Binary Logistic Regression (21 features) accuracy: {acc}\")\n",
     "\n",
     "# Number correct = accuracy * total samples\n",
     "num_total = len(y_test_21)\n",
@@ -448,7 +368,7 @@
     "print(f\"Number Correct: {num_correct} out of {num_total}\")\n",
     "\n",
     "# Confusion Matrix\n",
-    "cm = confusion_matrix(y_test, y_pred_c)\n",
+    "cm = confusion_matrix(y_test_21, y_pred_c)\n",
     "sns.heatmap(cm, \n",
     "            annot=True,\n",
     "            fmt='g', \n",
@@ -465,7 +385,7 @@
     "plt.gca().figure.text(0.5, 0.05, 'Prediction', ha='center', fontsize=13)\n",
     "plt.show()\n",
     "\n",
-    "print(classification_report(y_test, y_pred_c))"
+    "print(classification_report(y_test_21, y_pred_c))"
    ]
   },
   {
