Elapsed Time for Best Logistic Model a)

--- a/working_dir/Ariani_Best_Binary_Log.ipynb
+++ b/working_dir/Ariani_Best_Binary_Log.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 1,
    "id": "233e7b6e-93a9-4590-abe7-52c6948f26de",
    "metadata": {},
    "outputs": [
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 2,
    "id": "1b505b00-7356-43d4-bd1f-c0599df50739",
    "metadata": {},
    "outputs": [
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 7,
    "id": "c5df96c9-ad00-427a-84b0-c8ab25938444",
    "metadata": {},
    "outputs": [
@@ -203,11 +203,14 @@
       "    accuracy                           0.91     14139\n",
       "   macro avg       0.91      0.91      0.91     14139\n",
       "weighted avg       0.91      0.91      0.91     14139\n",
-      "\n"
+      "\n",
+      "Elapsed Time: 0.8231348991394043\n"
      ]
     }
    ],
    "source": [
+    "import time\n",
+    "start = time.time()\n",
     "BLR_a = LogisticRegression(\n",
     "                    penalty='l2',\n",
     "                    solver='lbfgs',\n",
@@ -243,7 +246,9 @@
     "plt.gca().figure.text(0.5, 0.05, 'Prediction', ha='center', fontsize=13)\n",
     "plt.show()\n",
     "\n",
-    "print(classification_report(y_test_21, y_pred_a))"
+    "print(classification_report(y_test_21, y_pred_a))\n",
+    "end = time.time()\n",
+    "print(\"Elapsed Time:\", end - start)"
    ]
   },
   {
