Update and rename final_best_model.ipynb to ANN_A_BestModel.ipynb

--- a/ANN_A_BestModel.ipynb
+++ b/ANN_A_BestModel.ipynb
@@ -18,13 +18,13 @@
         "\n",
         "* To handle categorical features correctly, I applied **one-hot encoding**, which converts values like `0` and `1` into distinct vectors such as `[1, 0]` and `[0, 1]`.\n",
         "\n",
-        "* In addition, I **bucketed the continuous features** `BMI`, `MentHlth`, and `PhysHlth` into discrete classes based on meaningful thresholds. For example, `BMI` is categorized into **five classes** (0 through 4). More details on the binning criteria can be found in the final text cell of the notebook or in the provided dataset:\n",
+        "* In addition, I **bucketed the continuous features** `BMI`, `MentHlth`, and `PhysHlth` into discrete classes based on meaningful thresholds. For example, `BMI` is categorized into **five classes** (0 through 4), `MentHlth` is categorized into **four classes** (0 through 4), and ``PhysHlth` is categorized into **four classes** (0 through 4)`. More details on the binning criteria can be found in the final text cell of the notebook or in the provided dataset:\n",
         "  📎 [Google Drive CSV link](https://drive.google.com/file/d/1oAdz8yzwIxZaj8vnneNy6L6QCKL9gQ3_/view?usp=sharing)\n",
         "\n",
         "* Since artificial neural networks (ANNs) are capable of capturing both **linear and non-linear relationships**, we fed the entire encoded dataset into the model without additional feature engineering.\n",
         "\n",
         "---\n",
-        "\n",
+        "\n",   
         "### **2. Artificial Neural Network (ANN) Design**\n",
         "\n",
         "* The model consists of **11 total layers**: 1 input layer, 9 hidden layers, and 1 output layer.\n",
